Fixing the footer contact info spacing

--- a/web/app/themes/envisioningjustice/assets/styles/components/_footer.scss
+++ b/web/app/themes/envisioningjustice/assets/styles/components/_footer.scss
@@ -73,6 +73,7 @@ footer.site-footer {
   }
 
   .logos {
+    margin-top: 40px;
     margin-bottom: 15px;
     a {
       display: inline-block;
@@ -133,7 +134,7 @@ footer.site-footer {
 
     .site-communication {
       margin-right: 50px;
-      margin-bottom: 60px;
+      margin-bottom: 20px;
 
       a:hover {
         text-decoration: underline;
